@@ -30,6 +30,11 @@
       <version>0.4</version>
     </dependency>
     <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.46.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>21.0.6</version>
@@ -147,6 +152,13 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
+        <configuration>
+          <mainClass>com.cab302.peerpractice.PeerPracticeApplication</mainClass>
+          <args>
+            <arg>--add-modules</arg>
+            <arg>javafx.controls,javafx.fxml,javafx.web,javafx.swing</arg>
+          </args>
+        </configuration>
         <executions>
           <execution>
             <!-- Default configuration for running with: mvn clean javafx:run -->
@@ -162,6 +174,15 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <mainClass>com.cab302.peerpractice.PeerPracticeApplication</mainClass>
+          <commandlineArgs>--module-path ${javafx.runtime.path} --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.swing</commandlineArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
